--- a/webApp/index.html
+++ b/webApp/index.html
@@ -17,7 +17,7 @@
         <!-- 1st row - map title  -->
         <div class="row">
             <div class="col-xs-12 dc-data-count dc-chart" id="data-count">
-                <h3><b>2016 - 2020 California Fires (>500 acres) Size Predicitons
+                <h3><b>2016 - 2020 California Fires (>1000 acre) Size Predicitons
                     </b>
                     <a href="https://geoair.lipingyang.org/" target="_blank"><img src="icon_geoair.png"
                             alt="GeoAIR_icon" style="width:10%;height:10%;"></a>
